Added some fonts from create-react-app

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   width: 0.25rem;
 }
 
@@ -8,4 +8,4 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background: #6649b8;
-}
+} */
