--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,47 +1,67 @@
-.sidebar {
-  position: relative;
-  overflow: hidden;
-  height: 100%;
-  width: 280px;
-  background: white;
-  padding: 20px;
-  font-size: 15px;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.sidebar-toggle {
-  position: absolute;
-  margin: 20px;
-  color: #a0a0a0;
-  z-index: 100;
-  font-size: 1.5em;
-  cursor: pointer;
-}
-
-.login-form-forgot {
-  float: right;
-}
-
-.login-form-button {
-  width: 100%;
-}
-
-.ant-avatar {
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  border-radius: 50%;
-  font-size: 3em !important;
-}
-
-.middle .ant-form-item-control {
+.courosel-container {
   display: flex;
   justify-content: center;
+} 
+
+.courosel {
+  margin: 10px 50px 10px 50px;
+  transform: translateY(20%);
+  width: 90%;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
-.sidebar .ant-form-item {
-  margin: 0;
+
+.courosel-item {
+  width: 100%;
+  height: 400px;
+  font-size: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+} 
+
+.courosel-img {
+  width: 100%;
+  height: 400px;
+  z-index: 1;
 }
 
-.sidebar .ant-form-item-control {
-  line-height: 29px;
+
+.courosel-inputs {
+  z-index: 2;
+  display: flex;
+  justify-content: space-evenly;
+  transform: translateY(10%);
+  margin: 0 4em 0 4em;
+}
+
+.courosel-input {
+  border: 2px solid white;
+  width: 40px;
+  height: 12px;
+  border-radius: 5px;
+  /* padding: 0.5em;
+  margin: 0.5em; */
+  height: 15px;
+  width: 50px;
+  /* background: red; */
+}
+
+.courosel-input:hover {
+  cursor: pointer;
+  background-color: white;
+}
+
+.first-input-filling, .second-input-filling, .third-input-filling, .forth-input-filling, .fifth-input-filling {
+  height: 100%
 }
